--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Paul Skenes over 7.0 Ks</h3>
+    <h3>Paul Skenes racks up Ks today</h3>
     <p>Great K% matchup vs Phillies — projected for 7.0 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Taylor Ward HR prop</h3>
+    <h3>Taylor Ward has HR potential</h3>
     <p>Power bat with 1 HRs and strong contact vs George Kirby.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jeremy Pena knocks one?</h3>
-    <p>12-game streak — bat is staying hot.</p>
+    <h3>Jonathan India knocks one?</h3>
+    <p>Batting 1.0 vs Mike Vasil — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: philadelphiaphillies vs pittsburghpirates</h3>
-    <p>Low 1st-inning scoring profile with Paul Skenes and Cristopher Sanchez.</p>
+    <h3>philadelphiaphillies vs pittsburghpirates NRFI Pick</h3>
+    <p>Paul Skenes and Cristopher Sanchez tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays run fest?</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at George M. Steinbrenner Field.</span></p>
+    <h3><span class="blurred">Miami Marlins vs Tampa Bay Rays — total runs over</span></h3>
+    <p><span class="blurred">George M. Steinbrenner Field is a run-friendly park — nan% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
