--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Paul Skenes is projected to whiff 7.2</h3>
-    <p>Paul Skenes faces Cubs, who strike out 21.5% of the time.</p>
+    <h3>Carlos Rodon racks up Ks today</h3>
+    <p>Great K% matchup vs Red Sox — projected for 6.6 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Pedro Pages HR prop</h3>
-    <p>Pedro Pages has hit 2 already and owns a 150.0% hard-hit rate vs Freddy Peralta.</p>
+    <h3>Josh Bell to hit a HR</h3>
+    <p>Power bat with 1 HRs and strong contact vs Janson Junk.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brooks Lee Hit Prop</h3>
-    <p>Riding a 12-game hit streak.</p>
+    <h3>Steven Kwan knocks one?</h3>
+    <p>Batting 1.0 vs George Kirby — strong contact spot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>torontobluejays vs philadelphiaphillies NRFI Pick</h3>
-    <p>Two quick starters: Ranger Suarez and Kevin Gausman.</p>
+    <h3>NRFI: torontobluejays vs philadelphiaphillies</h3>
+    <p>Cristopher Sanchez and Bowden Francis tend to shut it down early — NRFI value here.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Cleveland Guardians vs Seattle Mariners — total runs over</span></h3>
-    <p><span class="blurred">All signs point to a shootout at T-Mobile Park (37.0%).</span></p>
+    <h3><span class="blurred">Toronto Blue Jays vs Philadelphia Phillies — total runs over</span></h3>
+    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 90.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
