--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Yusei Kikuchi is projected to whiff 5.9</h3>
-    <p>Great K% matchup vs Orioles — projected for 5.9 strikeouts.</p>
+    <h3>Nick Pivetta racks up Ks today</h3>
+    <p>Nick Pivetta faces Diamondbacks, who strike out 18.9% of the time.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Bryan Reynolds HR prop</h3>
-    <p>55.6% hard-hit rate vs Colin Rea — eyes on the fences.</p>
+    <h3>Bryan Reynolds has HR potential</h3>
+    <p>Power bat with 2 HRs and strong contact vs Colin Rea.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brooks Lee knocks one?</h3>
+    <h3>Brooks Lee to record a hit</h3>
     <p>14-game streak — bat is staying hot.</p>
 </div>
 
 <div class="prop-card">
-    <h3>torontobluejays vs philadelphiaphillies NRFI Pick</h3>
+    <h3>NRFI: torontobluejays vs philadelphiaphillies</h3>
     <p>Two quick starters: Zack Wheeler and Jose Berrios.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Toronto Blue Jays@Philadelphia Phillies could explode offensively</span></h3>
-    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 4.0% chance of fireworks.</span></p>
+    <h3><span class="blurred">Toronto Blue Jays vs Philadelphia Phillies run fest?</span></h3>
+    <p><span class="blurred">Citizens Bank Park is a run-friendly park — 100.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
