--- a/top_props.html
+++ b/top_props.html
@@ -33,28 +33,28 @@
 <h1>Daily Top Props</h1>
 
 <div class="prop-card">
-    <h3>Logan Gilbert over 7.8 Ks</h3>
-    <p>Logan Gilbert faces Red Sox, who strike out 23.3% of the time.</p>
+    <h3>Robbie Ray is projected to whiff 6.2</h3>
+    <p>Great K% matchup vs Guardians — projected for 6.2 strikeouts.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Jose Altuve HR prop</h3>
+    <h3>Jose Altuve has HR potential</h3>
     <p>Power bat with 2 HRs and strong contact vs JP Sears.</p>
 </div>
 
 <div class="prop-card">
-    <h3>Brooks Lee Hit Prop</h3>
-    <p>Riding a 15-game hit streak.</p>
+    <h3>Brooks Lee knocks one?</h3>
+    <p>🔥 15 straight games with a hit.</p>
 </div>
 
 <div class="prop-card">
-    <h3>NRFI: losangelesangels vs newyorkyankees</h3>
-    <p>Low 1st-inning scoring profile with Clarke Schmidt and Jose Soriano.</p>
+    <h3>NRFI: sandiegopadres vs losangelesdodgers</h3>
+    <p>Low 1st-inning scoring profile with Matt Sauer and Randy Vasquez.</p>
 </div>
 
 <div class="prop-card">
-    <h3><span class="blurred">Philadelphia Phillies@Miami Marlins could explode offensively</span></h3>
-    <p><span class="blurred">nan% model chance of a high-scoring affair at loanDepot park.</span></p>
+    <h3><span class="blurred">Boston Red Sox vs Seattle Mariners — total runs over</span></h3>
+    <p><span class="blurred">T-Mobile Park is a run-friendly park — 67.0% chance of fireworks.</span></p>
     <p style="color:red; font-weight:bold; text-align:center;">WORK IN PROGRESS</p>
 </div>
 
